<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/help_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/help_welcome"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/help_desc"
        android:gravity="fill_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        style="@style/AppTheme" />

    <Button
        android:text="@string/help_back"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/help_back"
        android:onClick="clickBack" />
</LinearLayout>