<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/results_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/results_title"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/results_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/results_time"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/results_time_edit"
            android:background="@drawable/rekt"
            android:layout_width="250dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/results_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/results_log"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/results_log_edit"
            android:background="@drawable/rekt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/results_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/results_email"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/results_fakemail"
            android:ems="10"
            android:id="@+id/results_email_edit"
            android:background="@drawable/rekt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">


        <Button
            android:text="@string/results_b_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/results_send"
            android:layout_weight="1"
            android:onClick="clickSend" />

        <Button
            android:text="@string/results_b_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/results_new"
            android:layout_weight="1"
            android:onClick="clickNew" />

        <Button
            android:text="@string/first_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/results_exit"
            android:layout_weight="1"
            android:onClick="clickExit" />
    </LinearLayout>

</LinearLayout>