<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/config_alias_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/config_alias_desc"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/config_alias_icon"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:background="@android:drawable/btn_star"
            android:layout_gravity="center_horizontal|center"
            android:backgroundTint="@color/colorAccent" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/config_alias_edit"
            android:layout_weight="1"
            android:text="@string/config_alias_edit"
            android:background="@drawable/rekt"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/config_size_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/config_size_desc"
            android:layout_weight="1"
            android:textSize="18sp"
            android:paddingStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <RadioButton
                android:text="@string/config_size_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/config_size_l"
                android:paddingEnd="5dp"
                android:checked="false"
                android:layout_marginStart="5dp" />

            <RadioButton
                android:text="@string/config_size_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/config_size_m"
                android:paddingEnd="5dp" />

            <RadioButton
                android:text="@string/config_size_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/config_size_s"
                android:checked="true"
                android:textColorLink="@color/colorPrimary" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/config_time_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/config_time_desc"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/config_icon_time"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_horizontal|center"
            android:background="@android:drawable/ic_menu_recent_history"
            android:backgroundTint="@android:color/background_dark" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/config_time_check"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:text="@string/config_game_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/config_game_start"
            android:onClick="clickStartGame" />
    </LinearLayout>

</LinearLayout>